// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "2xl", align: normal, color: start, hyphens: primary, and ellipsis: none 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-2xl);
  color: var(--p-color-primary);
  text-align: start;
  hyphens: none;
}"
`;

exports[`getComponentCss() > should return correct css for size: "inherit", align: normal, color: center, hyphens: inherit, and ellipsis: none 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: inherit;
  color: currentcolor;
  text-align: center;
  hyphens: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "lg", align: normal, color: center, hyphens: inherit, and ellipsis: inherit 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-lg);
  color: currentcolor;
  text-align: center;
  hyphens: inherit;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "md", align: normal, color: center, hyphens: inherit, and ellipsis: none 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-md);
  color: currentcolor;
  text-align: center;
  hyphens: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "sm", align: normal, color: center, hyphens: inherit, and ellipsis: none 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: currentcolor;
  text-align: center;
  hyphens: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "sm", align: normal, color: inherit, hyphens: inherit, and ellipsis: none 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: currentcolor;
  text-align: inherit;
  hyphens: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}"
`;

exports[`getComponentCss() > should return correct css for size: "xl", align: normal, color: end, hyphens: primary, and ellipsis: manual 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-xl);
  color: var(--p-color-primary);
  text-align: end;
  hyphens: manual;
  overflow-wrap: break-word;
}"
`;

exports[`getComponentCss() > should return correct css for size: "xl", align: normal, color: start, hyphens: primary, and ellipsis: auto 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-xl);
  color: var(--p-color-primary);
  text-align: start;
  hyphens: auto;
  overflow-wrap: break-word;
}"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"sm","xs":"md","s":"lg","m":"xl","l":"2xl","xl":"lg"}, align: normal, color: end, hyphens: inherit, and ellipsis: none 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(h1,h2,h3,h4,h5,h6)) {
  all: unset;
}
.root {
  all: unset;
  display: block;
  font: var(--p-font-weight-normal) var(--p-typescale-2xl)/var(--p-leading-normal) var(--p-font-porsche-next);
  font-size: var(--p-typescale-sm);
  color: currentcolor;
  text-align: end;
  hyphens: none;
}
@media(min-width:480px) {
  .root {
    font-size: var(--p-typescale-md);
  }
}

@media(min-width:760px) {
  .root {
    font-size: var(--p-typescale-lg);
  }
}

@media(min-width:1000px) {
  .root {
    font-size: var(--p-typescale-xl);
  }
}

@media(min-width:1300px) {
  .root {
    font-size: var(--p-typescale-2xl);
  }
}

@media(min-width:1760px) {
  .root {
    font-size: var(--p-typescale-lg);
  }
}
"
`;
